# codewars-py

./: .gitignore  pyproject.toml
codewars/: anagramas_par.py  balance_parathenses.py  camelcase.py  decimal_to_binary.py  extract_domain_name.py  gcd.py  hannoi.py  happy_number.py  infinite_array.py  linkedlist.py  linkedlist_operations.py  linkelistalt.py  maxsublistsum.py  moving_zeros.py  perimeter.py  recursion_sum.py  reverse_k.py  reverse_stack.py  sort_binary_list.py  sudoku.py
codewars/array/: find_sum.py  slide_window.py  sort.py
codewars/queue/: queue_with_stack.py
codewars/stack/: evaluate_postfix.py  next_greater_element.py
tests/: test_anagramas_par.py  test_balance_parathenses.py  test_camelcase.py  test_codewars.py  test_decimal_to_binary.py  test_evaluate_postfix.py  test_extract_domain_name.py  test_find_sum.py  test_gcd.py  test_linkedlist.py  test_linkedlist_operations.py  test_linkelistalt.py  test_maxsublistsum.py  test_moving_zeros.py  test_next_greater_element.py  test_perimeter.py  test_queue_with_stack.py  test_recursion_sum.py  test_reverse_k.py  test_sort.py  test_sort_binary_list.py  test_sudoku.py
