[tool.poetry]
name = "codewars"
version = "0.1.0"
description = ""
authors = ["mfilipelino <mfilipelino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.27.0"
black = "^21.9b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
